# oca-ocb-web

./: .gitignore  README.md
.forgejo/workflows/: publish-wheel.yml
.nix-postgres/: logfile  postgresql.conf
.nix-postgres/base/1/: 13465
.nix-postgres/base/4/: 2619
.nix-postgres/base/5/: 1259
.nix-postgres/global/: 1260  1262  1262_vm  2396  2397  2671  2672  2676  pg_control
.nix-postgres/pg_stat/: pgstat.stat
odoo-bringout-oca-ocb-html_builder/html_builder/i18n/: bs.po
odoo-bringout-oca-ocb-html_editor/: README.md  pyproject.toml
odoo-bringout-oca-ocb-html_editor/html_editor/i18n/: bs.po
odoo-bringout-oca-ocb-html_editor/meta/: wheel.json
odoo-bringout-oca-ocb-web_editor/: README.md  pyproject.toml
odoo-bringout-oca-ocb-web_editor/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ocb-web_editor/web_editor/i18n/: bs.po
odoo-bringout-oca-ocb-web_hierarchy/: README.md  pyproject.toml
odoo-bringout-oca-ocb-web_kanban_gauge/: README.md  pyproject.toml
odoo-bringout-oca-ocb-web_kanban_gauge/doc/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-web_kanban_gauge/web_kanban_gauge/i18n/: bs.po
odoo-bringout-oca-ocb-web_tour/: README.md  pyproject.toml
odoo-bringout-oca-ocb-web_tour/doc/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-oca-ocb-web_tour/web_tour/i18n/: bs.po
odoo-bringout-oca-ocb-web_unsplash/: README.md  pyproject.toml
odoo-bringout-oca-ocb-web_unsplash/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-web_unsplash/web_unsplash/i18n/: bs.po
