[project]
name = "odoo-bringout-oca-ocb-html_editor"
version = "18.0.1.0"
description = "HTML Editor - A Html Editor component and plugin system"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-ocb-base>=18.0.0",
    "odoo-bringout-oca-ocb-bus>=18.0.0",
    "odoo-bringout-oca-ocb-web>=18.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://git.hodi.ba/bringout/project-0"
repository = "https://git.hodi.ba/bringout/project-0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["html_editor"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
