[project]
name = "odoo-bringout-oca-ocb-web_hierarchy"
version = "19.0.0"
description = "web_hierarchy - Odoo addon (upstream OCB 19.0, added for v16->v19 migration completeness)"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["web_hierarchy"]
